feat: BucketItem에 Category 적용